[tool.poetry]
name = "python-project-template"
version = "0.1.0"
description = ""
authors = ["pigooosuke <hifirole@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = {extras = ["cli"], version = "^0.20.0"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pysen = "^0.10.2"
pytest-mock = "^3.8.2"
pytest-sugar = "^0.9.5"
black = "21.10b0"
flake8 = "4.0.1"
isort = "5.10.1"
mypy = "0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pysen]
version = "0.10.2"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py39"
[[tool.pysen.lint.mypy_targets]]
  paths = ["."]

[tool.pysen.lint.source]
  includes = ["src/", "tests/"]